Made chnages to fix the error message visibility in dark theme

--- a/style.css
+++ b/style.css
@@ -269,7 +269,6 @@ h1 {
   font-family: "Comfortaa", cursive;
   font-weight: 300;
   font-size: 1rem;
-  color: #403e3e;
 }
 
 .result button {
